added animation on site (standart and aos-library)

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   <i class="far fa-circle circle--black"></i>
                   <i class="far fa-circle circle--black"></i>
                   <i class="far fa-circle circle--black"></i>
-                  Node
+                  Node.js
                 </li>
                 <li>
                   <i class="far fa-circle"></i>
@@ -175,13 +175,15 @@
             <span>create great web</span>
             <span>apps]</span>
           </p>
-          <div class="web-illustration">
+          <div
+            class="web-illustration"
+            data-aos="fade-up"
+            data-aos-duration="3000"
+          >
             <span>web</span>
             <img
               src="/img/web-illustration.png"
               alt="web-illustration-laptop"
-              data-aos="fade-up"
-            data-aos-duration="3000"
             />
             <div class="about-me--text">
               <p data-aos="fade-right" data-aos-delay="1100">
@@ -195,7 +197,11 @@
               </p>
             </div>
           </div>
-          <div class="about-projects desktop-element" data-aos="fade-down" data-aos-delay="1000">
+          <div
+            class="about-projects desktop-element"
+            data-aos="fade-down"
+            data-aos-delay="1000"
+          >
             <div class="about-projects-bar">
               <p class="about-projects-count">10+</p>
             </div>
@@ -216,8 +222,11 @@
           </h2>
         </div>
         <div class="my-project-items-wrapper">
-          <div class="project-item" data-aos="zoom-in-up"
-          data-aos-anchor-placement="center-bottom">
+          <div
+            class="project-item"
+            data-aos="zoom-in-up"
+            data-aos-anchor-placement="center-bottom"
+          >
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -243,8 +252,11 @@
             </div>
             <span class="item-end"></span>
           </div>
-          <div class="project-item" data-aos="zoom-in-up"
-          data-aos-anchor-placement="center-bottom">
+          <div
+            class="project-item"
+            data-aos="zoom-in-up"
+            data-aos-anchor-placement="center-bottom"
+          >
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -270,8 +282,12 @@
             </div>
             <span class="item-end"></span>
           </div>
-          <div class="project-item" data-aos="zoom-in-up"
-          data-aos-anchor-placement="center-bottom" data-aos-delay="200">
+          <div
+            class="project-item"
+            data-aos="zoom-in-up"
+            data-aos-anchor-placement="center-bottom"
+            data-aos-delay="200"
+          >
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -297,8 +313,12 @@
             </div>
             <span class="item-end"></span>
           </div>
-          <div class="project-item" data-aos="zoom-in-up"
-          data-aos-anchor-placement="center-bottom" data-aos-delay="200">
+          <div
+            class="project-item"
+            data-aos="zoom-in-up"
+            data-aos-anchor-placement="center-bottom"
+            data-aos-delay="200"
+          >
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -326,16 +346,25 @@
       <!-- PERSONAL PROJECTS END -->
       <!-- TEAM PROJECTS -->
       <section class="my-team-projects">
-        <span class="substrate" data-aos="fade-left"
-        data-aos-easing="linear"
-        data-aos-duration="1500">team</span>
+        <span
+          class="substrate"
+          data-aos="fade-left"
+          data-aos-easing="linear"
+          data-aos-duration="1500"
+          >team</span
+        >
         <div class="title-wrapper">
-          <h2 class="section-title" data-aos="fade-right"
-          data-aos-offset="500"
-          data-aos-duration="500">Teamwork _projects</h2>
+          <h2
+            class="section-title"
+            data-aos="fade-right"
+            data-aos-offset="500"
+            data-aos-duration="500"
+          >
+            Teamwork _projects
+          </h2>
         </div>
         <div class="my-team-projects-items-wrapper">
-          <div class="project-item" data-aos="flip-left" data-aos-delay="300">
+          <div class="project-item" data-aos="flip-left" data-aos-delay="700">
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -358,7 +387,7 @@
             </div>
             <span class="item-end"></span>
           </div>
-          <div class="project-item" data-aos="flip-right" data-aos-delay="300">
+          <div class="project-item" data-aos="flip-right" data-aos-delay="700">
             <div class="project-slider">
               <div class="dots">
                 <i class="fas fa-circle project-dot"></i>
@@ -385,9 +414,13 @@
       </section>
       <!-- TEAM PROJECTS END -->
       <!-- CALLBACK FORM -->
-      <section class="callback" id="callback" data-aos="fade-up"
-      data-aos-offset="300"
-      data-aos-easing="ease-in-sine">
+      <section
+        class="callback"
+        id="callback"
+        data-aos="fade-up"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine"
+      >
         <div class="form-container">
           <form action="" class="callback-form">
             <h3 class="form-title">/Are you minding [a project?]</h3>
@@ -430,7 +463,11 @@
             <h2 class="calculator-title" data-aos="fade-right">
               Calculate_ <br class="line-break" />the cost of a future project
             </h2>
-            <p class="calculator-descr" data-aos="fade-right" data-aos-delay="500">
+            <p
+              class="calculator-descr"
+              data-aos="fade-right"
+              data-aos-delay="500"
+            >
               <span>This is an</span>
               <span class="calculator-descr-accent">approximate</span>
               <span>calculation.</span>
@@ -440,9 +477,14 @@
                 class="calculator-img tablet-width-img"
                 src="/img/calculator.svg"
                 alt="calculator"
-                data-aos="fade-up" data-aos-delay="1000"
+                data-aos="fade-up"
+                data-aos-delay="1000"
               />
-              <p class="tablet-width-p" data-aos="fade-right" data-aos-delay="700">
+              <p
+                class="tablet-width-p"
+                data-aos="fade-right"
+                data-aos-delay="700"
+              >
                 / The final cost depends on the technical requirements, terms,
                 specifics of your project.
               </p>
@@ -457,7 +499,12 @@
               specifics of your project.
             </p>
           </div>
-          <form action="" class="calculator-form" data-aos="fade-left" data-aos-delay="3000">
+          <form
+            action=""
+            class="calculator-form"
+            data-aos="fade-down"
+            data-aos-delay="2000"
+          >
             <div class="calculator-form-input">
               <label
                 for="calculator-form-website-type"
