added animation fixes

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <section class="my-team-projects">
         <span
           class="substrate"
-          data-aos="fade-left"
+          data-aos="zoom-in-down"
           data-aos-easing="linear"
           data-aos-duration="1500"
           >team</span
@@ -503,7 +503,7 @@
             action=""
             class="calculator-form"
             data-aos="fade-down"
-            data-aos-delay="2000"
+            data-aos-delay="1500"
           >
             <div class="calculator-form-input">
               <label
