The logo has been changed. Slider has been added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/cross-icon.css" />
     <link rel="stylesheet" href="css/choices.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -28,7 +29,7 @@
       <section class="front-page" id="front-page">
         <nav class="navigation mobile-tablet">
           <a href="#front-page" class="logo-link"
-            ><img src="img/goit-logo.svg" alt="logo"
+            ><img class="logo--img" src="img/logo.png" alt="logo"
           /></a>
           <a href="#callback" class="hire-me-btn">— HIRE ME</a>
           <div class="menu">
@@ -39,7 +40,7 @@
         </nav>
         <nav class="navigation-desktop">
           <a href="#front-page" class="logo-link"
-            ><img class="logo--img" src="img/goit-logo.svg" alt="logo"
+            ><img class="logo--img" src="img/logo.png" alt="logo"
           /></a>
           <ul class="menu-desktop">
             <li><a href="#about">about</a></li>
@@ -890,6 +891,7 @@
     <script src="/js/modals.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/animation-on-scroll.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="/js/script.js"></script>
   </body>
 </html>
